# GVINS_Ubuntu_20

camera_model/: CMakeLists.txt
camera_model/src/chessboard/: Chessboard.cc
config/: fire_geopositioning_config.yaml
estimator/: CMakeLists.txt
estimator/launch/: fire_geopositioning.launch
estimator/src/: estimator.cpp  estimator.h  estimator_node_backup.cpp
estimator/src/initial/: gnss_vi_initializer.h
feature_tracker/: CMakeLists.txt
